# iodin

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  codecov.yml  deny.toml
.github/workflows/: codeql.yml
client/go-iodin/: iodin.go  iodin.pb.go
cmd/iodin/: Cargo.toml  build.rs
cmd/iodin/src/: logger.rs  main.rs  mdb.rs  server.rs
cmd/iodin/src/proto/: iodin.rs  mod.rs
pigpio-rust/: Cargo.toml
pigpio-rust/src/: lib.rs  mock.rs
pigpio-sys/: Cargo.toml  build.rs  wrapper.h
pigpio-sys/src/: bindings-arm-linux.rs  lib.rs
