[workspace]
members = ["cmd/iodin"]
default-members = ["cmd/iodin"]

[profile.bench]
codegen-units = 1
debug = true
incremental = true
lto = false
opt-level = 3
overflow-checks = true

[profile.dev]
debug = true
incremental = true
lto = false
opt-level = 2
overflow-checks = true

[profile.test]
debug = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true

[profile.release]
codegen-units = 1
debug = true
lto = "thin"
opt-level = 3
overflow-checks = true
